# PythonPotrace

./: .gitignore  JSconcatOutput.txt  README.md  concatOutput.txt  out.txt  pyproject.toml  t.py  temp.py
Docs/: COutline.md  Outline.md
PythonPotrace/: Posterizer.py  Potrace.py  __init__.py  index.py  utils.py
PythonPotrace/C/: Makefile.in  main.c
PythonPotrace/Python/: main.py  potraceArgParser.py
PythonPotrace/Tests/: test.py
PythonPotrace/lib/: Posterizer.py  Potrace.py  __init__.py  utils.py
PythonPotrace/lib/types/: Bitmap.py  Curve.py  __init__.py
PythonPotrace/types/: Bitmap.py  Histogram.py  Opti.py  Path.py  Point.py  Quad.py  __init__.py
Tests/: TestCore.py  TestIntegration.py  test.py
lib/: Posterizer.py  Potrace.py  index.py  utils.py
lib/types/: Bitmap.py  Histogram.py  Opti.py  Path.py  Point.py  Sum.py
