[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonPotrace"
version = "0.1.0"
authors = [
    { name = "Kaden Gruizenga", email = "kgruiz@umich.com" }
]
description = "A Python implementation of the Potrace algorithm for vectorizing raster images."
readme = "Docs/README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent"
]
dependencies = [
    "pillow",
    "scikit-image",
    "matplotlib",
    "pooch"
]

[project.urls]
Homepage = "https://github.com/kgruiz/PythonPotrace"
BugTracker = "https://github.com/kgruiz/PythonPotrace/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["PythonPotrace", "PythonPotrace.*"]